// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@font-face {                                                                    |
  src: url();                                                                   |
}                                                                               |
                                                                                |
=====================================output=====================================
@font-face {                                                                    |
  src: url();                                                                   |
}                                                                               |
                                                                                |
================================================================================
`;

exports[`inline_url.css - css-verify 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.breadItem {                                                                    |
  background-image: url('/images/product/simple_product_manager/breadcrumb/chevr|on_right.png');
  background-image: url(/images/product/simple_product_manager/breadcrumb/chevro|n_right.png);
  -fb-sprite: url(fbglyph:cross-outline, fig-white);                            |
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCA|QAAAC1HAwCAAAAC0lEQVR42mO4/B8AAqgB0yr7dJgAAAAASUVORK5CYII=);
  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABC|AQAAAC1HAwCAAAAC0lEQVR42mO4/B8AAqgB0yr7dJgAAAAASUVORK5CYII=");
  background-image: url(data:application/font-woff;charset=utf-8;base64,ThisIsNo|rmalBut/+0ThisIsLowerCased);
  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1|HAwCAAAAC0lEQVR42mO4/B8AAqgB0yr7dJgAAAAASUVORK5CYII=) center center no-repeat;
}                                                                               |
                                                                                |
=====================================output=====================================
.breadItem {                                                                    |
  background-image: url("/images/product/simple_product_manager/breadcrumb/chevr|on_right.png");
  background-image: url(/images/product/simple_product_manager/breadcrumb/chevro|n_right.png);
  -fb-sprite: url(fbglyph:cross-outline, fig-white);                            |
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCA|QAAAC1HAwCAAAAC0lEQVR42mO4/B8AAqgB0yr7dJgAAAAASUVORK5CYII=);
  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABC|AQAAAC1HAwCAAAAC0lEQVR42mO4/B8AAqgB0yr7dJgAAAAASUVORK5CYII=");
  background-image: url(data:application/font-woff;charset=utf-8;base64,ThisIsNo|rmalBut/+0ThisIsLowerCased);
  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1|HAwCAAAAC0lEQVR42mO4/B8AAqgB0yr7dJgAAAAASUVORK5CYII=)
    center center no-repeat;                                                    |
}                                                                               |
                                                                                |
================================================================================
`;
